--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ sotsuron_experiment/heavy/*
 sotsuron_experiment/images/save.jpg
 *_ignore/*
 sotsuron_experiment/analysis/png/*
+sotsuron_experiment/analysis/mp4/*
