--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ sotsuron_experiment/analysis/png/*
 sotsuron_experiment/analysis/mp4/*
 sotsuron_experiment/analysis/velocity_error/big_data
 *.log
+*.asv
